--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 }
 
 header {
@@ -49,27 +50,16 @@ main {
     height: 100%;
 }
 
-#schedule-list{
-    height: 600px;
-    position: relative;
-}
-
 #schedule-container {
     display: flex;
-    height: 600px;
     flex-grow: 1;
     flex-direction: column;
 }
 
-#time-axis {
-    width: 50px;
-    border-right: 1px solid #000;
-}
-
-
 #day-of-week {
     display: flex;
     height: 30px;
+    border-bottom:1px solid #000;
 }
 
 .column {
@@ -79,20 +69,28 @@ main {
     font-weight: bold;
 }
 
-#schedule-list {
-    flex-grow: 1;
+#row {
     display: flex;
+    flex-direction: row;
 }
 
-.time-slot {
-    height: 30px;
-    border-bottom: 1px solid #eee;
-    font-size: 0.8em;
-    text-align: right;
-    padding-right: 5px;
+#time-axis {
+    top: 31px;
+    width: calc(100vw/8 - 1px);
+    height: 100vh;
+    border-right: 1px solid #000;
+}
+
+#schedule-list {
+    position: relative;
+    flex-grow: 1;
+    height: 100vh;
+    width: calc(100vw - 100vw/8);
+    display: flex;
 }
 
 .schedule-column {
     flex: 1;
     border-right: 1px solid #000;
 }
+
